# tjm-project

./: .env.example  .gitignore  README.md  api_client.py  automation.py  grounding.py  main.py  pyproject.toml  requirements.txt  screenshot.py
